<resources>
    <string name="app_name">FoodRunner</string>
    <string name="food_hunter">Food Hunter</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Create an Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name_min_3_character">Name</string>
    <string name="email">Email</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="next">Next</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="Submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurant">Favourite Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="confirm_password">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="action_sort">Sort</string>
    <string name="preference_file_name">FoodRunner Preference</string>
    <string name="your_order_has_been_successfully_placed">Your Order has Been Successfully Placed</string>
    <string name="ok">Ok</string>
    <string name="nishantbadaya_gmail_com">nishantbadaya@gmail.com</string>
    <string name="cost_high_to_low">cost_high_to_low</string>
    <string name="cost_low_to_high">cost_low_to_high</string>
    <string name="rating">rating</string>
    <string name="sortby">sortBy</string>
    <string name="question0">Q1. What is FoodHunter?</string>
    <string name="answer0">FoodHunter is a food delivery service that does Home Deliveries to customers. we have served over 75,000 people so far.</string>
    <string name="question1">Q2. Why FoodHunter?</string>
    <string name="answer1">A2. At FoodHunter we understand the challenges you face on a daily basis in sourcing the best quality packaging material. FoodHunter Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question2">Q3. How are you guys different?</string>
    <string name="answer2">A3. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders.</string>
    <string name="question3">Q4. Can i get discounts for big orders?</string>
    <string name="answer3">A4. Sorry, as a practice we do not give discounts as we work on very slim margins, already.But, we could check with the Restaurant - and IF they offer any special discount, we will be happy to pass it on to you!</string>
    <string name="question4">Q5. Forgot Password?</string>
    <string name="answer4">A5. You can reset your password by proving the registered mobile number and email address.You will receive an otp on your registered email and you can change your password any number of time using that same otp for 24hrs.</string>
    <string name="question5">Q6. Contacts?</string>
    <string name="answer5">Contact us on:</string>
</resources>