<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogoImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogoImage"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_name"
            android:hint="@string/name_min_3_character"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="#ffffff"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_mobile_number"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_mobile_number" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMobileNumber"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_location"
            android:hint="@string/delivery_address"
            android:inputType="text"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLocation"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_margin="10dp"
            android:backgroundTint="@color/splashColor"
            android:padding="5dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>
        </ScrollView>

</RelativeLayout>