<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/imgLogoImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtSimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogoImage"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/enter_your_registered_mobile_number_and_email_below"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSimpleText"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_mobile_number"
            android:hint="@string/mobile_number_10_digits"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMobileNumber"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_margin="10dp"
            android:background="#3700B3"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>