<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imgLogoImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtSimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogoImage"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="Enter the received OTP below"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSimpleText"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_mobile_number"
            android:hint="@string/otp_4_characters"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"

            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etOtp"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_password"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#696969"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_margin="10dp"
            android:background="#3700B3"
            android:padding="5dp"
            android:text="@string/Submit"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>